--- a/Mod1Lab/index.html
+++ b/Mod1Lab/index.html
@@ -20,10 +20,11 @@
                 Hero Primary Content
             </div>
         </section>
+
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-1-3">
+                    <div class="col-1-3 pull-right-sm">
                         Circle Image
                     </div>
                     <div class="col-2-3">
@@ -32,6 +33,27 @@
                 </div>
             </div>
         </section>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-1-3 remove-gutter-xs">
+                    <div class="background-secondary">
+                        Feature Content
+                    </div>
+                </div>
+                <div class="col-1-3 remove-gutter-xs">
+                    <div class="background-secondary">
+                        Feature Content
+                    </div>
+                </div>
+                <div class="col-1-3 remove-gutter-xs">
+                    <div class="background-secondary">
+                        Feature Content
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <section class="background-primary">
             <div class="container">
                 Testimonial Content
@@ -48,9 +70,52 @@
             </div>
         </section>
     </main>
-    <footer class="background-primary">
+    <footer class="background-quaternary">
         <div class="container">
-            Footer Content
+            <div class="row">
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="footer1">
+                        Logo
+                    </div>
+                </div>
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="footer1">
+                        Address
+                    </div>
+                </div>
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="footer1">
+                        Phone Number
+                    </div>
+                </div>
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="bfooter1">
+                        Social Media
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="footer1">
+                    </div>
+                </div>
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="footer1">
+                        Copy Right
+                    </div>
+                </div>
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="footer1">
+                        Privacy Policy
+                    </div>
+                </div>
+                <div class="col-1-4 remove-gutter-xs">
+                    <div class="bfooter1">
+                        Terms of Use
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
